--- a/src/pages/install.astro
+++ b/src/pages/install.astro
@@ -20,7 +20,7 @@ import Footer from "../components/Footer.astro";
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
         </svg>
-        <span>Please install systemd and awk,<a class="link" href="https://code.visualstudio.com/Download#" target="_blank">vscode</a></span>
+        <span>Please install awk and <a class="link" href="https://code.visualstudio.com/Download#" target="_blank">vscode</a></span>
       </div>  
     </div>
     <h3 class="mb-4 antialiased text-3xl font-semibold">Installation</h3>
