--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,8 +18,7 @@ const { color } = Astro.props;
   <div class="navbar-end mr-4">
     <label class="ml-4 swap swap-rotate">
       <!-- this hidden checkbox controls the state -->
-      <input type="checkbox" class="theme-controller" value="dark"/>
-    
+      <input type="checkbox" data-toggle-theme="dark,light" data-act-class="ACTIVECLASS" />
       <!-- sun icon -->
       <svg
         class="swap-on h-8 w-8 fill-current"
